<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <TextView
        android:id="@+id/textTalk"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/receive_message"
        android:layout_above="@+id/info_message"
        android:textSize="20sp"
        android:scrollbars="vertical"
        android:fadeScrollbars="false" />

    <TextView
        android:id="@+id/info_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/info_message"
        android:layout_above="@+id/b1"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="#ff9494" />

    <Button
        android:id="@+id/b1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnUp"
        android:text="@string/b1"/>

    <Button
        android:id="@+id/b2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnUp"
        android:layout_toRightOf="@+id/b1"
        android:text="@string/b2"/>

    <Button
        android:id="@+id/b3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnUp"
        android:layout_toRightOf="@+id/b2"
        android:text="@string/b3"/>

    <Button
        android:id="@+id/b4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnUp"
        android:layout_toRightOf="@+id/b3"
        android:layout_alignParentEnd="true"
        android:text="@string/b4"/>

    <Button
        android:id="@+id/btnUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/up"
        android:layout_above="@+id/btnLeft"/>

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:text="@string/left"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnDown" />

    <Button
        android:id="@+id/btnRight"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:text="@string/right"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/btnDown" />

    <Button
        android:id="@+id/btnDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/down"
        android:layout_above="@+id/editText"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message"
        android:id="@+id/editText"
        android:layout_above="@+id/btnSend"/>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/name"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="italic"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>