<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zhuxinqi.steven.androidfirmwareupdate10.Main_Act"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/info_message"
        android:textStyle="italic"
        android:textColor="#ff9494"
        android:layout_marginTop="230dp" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect" />

    <Button
        android:id="@+id/btnChooseFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose" />

    <Button
        android:id="@+id/btnTalk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/talk" />

    <Button
        android:id="@+id/btnDisconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disconnect" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_gravity="end"
        android:textStyle="italic" />

</LinearLayout>
